--- a/src/main.scss
+++ b/src/main.scss
@@ -41,6 +41,7 @@ button {
 input {
 	display: block;
 	background-color: transparent;
+	color: $accentWhite;
 	width: 100%;
 	padding: .5rem 1rem;
 	margin: 1rem 0;
